--- a/style.css
+++ b/style.css
@@ -11,7 +11,6 @@ header{
     display: flex;  
     background-color: rgb(75, 117, 196);
     padding: 1rem;
-    
 }
 header,h1{
     font-style: italic;
@@ -22,17 +21,86 @@ header,h1{
 main{    
     background-color: azure;
     width: 100%;
+    min-height: 100vh;
+    
 }
-
-
 .login{
     width: 50%;
-    padding: 12rem;
-    background-color: antiquewhite;
+    max-width: 350px;
+    padding: 7%;
     margin: 0 auto;
 }
 .inicio{
     background-color: rgb(65, 97, 202);
-    padding: 2rem;
+    width: 100%;
+    padding: 6%;
     border-radius: 10px;
+    font-size: 2rem;
+    box-shadow: 0px 6px 13px 0px #000;
+
+}
+.inicio h1{
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 45px;
+    text-align: center;
+    margin: 2rem;
+}
+.inicio input{
+    width: 100%;
+    height: 30px;
+    border-radius: 4px;
+    background-color: rgb(43, 67, 148);
+    margin-bottom: 16px;
+    border: 1px solid rgb(43, 67, 148);
+}
+#iniciar{
+    width: 100%;
+    background-color: rgb(160, 217, 244);
+    border-radius: 4px;
+    height: 30px;
+    border: 1px solid rgb(43, 67, 148);
+}
+/* footer */
+
+.pie-pagina{
+    width: 100%;
+    background-color: #0a141d;
+}
+.pie-pagina .grupo-1{
+    width: 100%;
+    max-width: 1200px;
+    margin: auto;
+    display:grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap:50px;
+    padding: 45px 0px;
+}
+.pie-pagina .grupo-1 .box .a{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.pie-pagina .grupo-1 .box h1{
+    width: 250px;
+    color: #fff;
+}
+.pie-pagina .grupo-1 .box h2{
+    color: #fff;
+    margin-bottom: 25px;
+    font-size: 20px;
+}
+.pie-pagina .grupo-1 .box p{
+    color: #efefef;
+    margin-bottom: 10px;
+}
+.pie-pagina .grupo-2{
+    background-color: #0a1a2a;
+    padding: 15px 10px;
+    text-align: center;
+    color: #fff;
+}
+.pie-pagina .grupo-2 p{
+    font-size: 15px;
 }
