--- a/style.css
+++ b/style.css
@@ -5,39 +5,67 @@
 
 body {
     width: 100%;
+    
 }
 
-header{
-    display: flex;  
-    background-color: rgb(75, 117, 196);
+label{
+
+    color: white;
+}
+
+header{  
+    max-width: 100%;
+    display:flex;
+    background-color: rgb(246, 157, 80);
+    opacity: 3px;
     padding: 1rem;
+    margin: auto;
+    backdrop-filter: blur(20px);    
+    justify-content: space-between;
+    overflow: hidden;
 }
 header,h1{
+
     font-style: italic;
-    align-items: flex-start;
-    
 }
 
-main{    
-    background-color: azure;
-    width: 100%;
-    min-height: 100vh;
-    
+.header2{
+   
+    display: flex;
+    justify-content: right;
+
 }
-.login{
-    width: 50%;
+
+.botonSalir{
+    display:flex;
+    width: 2.5%;
+    float:right;
+    position: absolute;
+
+}
+main{    
+    width: 100%;
+    height: 100vh;
+    display:flex;
+    background: url(img/fondo1.jpg);
+    background-position: center;
+    background-size: cover;
+    justify-content: center;
+}
+#login{
+    display:flex;
     max-width: 350px;
-    padding: 7%;
-    margin: 0 auto;
+    padding: 7%;    
 }
 .inicio{
-    background-color: rgb(65, 97, 202);
     width: 100%;
     padding: 6%;
     border-radius: 10px;
     font-size: 2rem;
     box-shadow: 0px 6px 13px 0px #000;
-
+    color: #fff;
+    backdrop-filter: blur(20px);
+    border-bottom: 5px #fff;
 }
 .inicio h1{
     font-family: 'Courier New', Courier, monospace;
@@ -49,9 +77,11 @@ main{
     width: 100%;
     height: 30px;
     border-radius: 4px;
-    background-color: rgb(43, 67, 148);
+    background-color: transparent;
     margin-bottom: 16px;
-    border: 1px solid rgb(43, 67, 148);
+    border: none;
+    outline: none;
+
 }
 #iniciar{
     width: 100%;
@@ -62,9 +92,10 @@ main{
 }
 /* footer */
 
-.pie-pagina{
+.pie-pagina{    
     width: 100%;
     background-color: #0a141d;
+
 }
 .pie-pagina .grupo-1{
     width: 100%;
@@ -103,4 +134,76 @@ main{
 }
 .pie-pagina .grupo-2 p{
     font-size: 15px;
+}
+/* fin footer */
+
+/* Control */
+.ocultar{
+    visibility: hidden;
+    position: absolute;
+}
+.ver{
+    visibility: visible;
+    position: absolute;
+} 
+/* Fin control */
+
+/* Menu */
+#contenido{
+    width: 100%;
+    height: 100px;
+}
+#menu{
+    display: flex;
+    background: transparent;
+    width: 100%;
+    height: 7rem;
+    box-shadow: 0px 10px 13px 0px #000;
+    backdrop-filter: blur(20px);
+}
+#menu input{
+    height: 40px;
+    margin: 2rem auto;
+    width: 30%;
+    border-radius: 6px;
+    font-style: italic;
+    background-color: rgb(160, 217, 244);
+}
+
+/* Fin menu */
+
+/* formulario cliente */
+#contenedor{
+    display:flex;
+    text-align: center;
+}
+#cliente{
+    display:flex;
+    max-width: 350px;
+    margin: auto auto;   
+    width: 80%;
+    padding: 4%;
+    border-radius: 10px;
+    font-size: 2rem;
+    box-shadow: 0px 6px 13px 0px #000;
+    color: #fff;
+    backdrop-filter: blur(20px);
+}
+#formularioCliente{
+
+    
+}
+#formularioCliente label{
+    font-size: 20px;
+}
+
+#formularioCliente input{
+    text-align: center;
+    width: 100%;
+    height: 30px;
+    border-radius: 4px;
+    background-color: transparent;
+    margin-bottom: 16px;
+    border: none;
+    outline: none;
 }
